Fix mobile mode width alignment between navbar and content

--- a/_sass/_refactor-styles.scss
+++ b/_sass/_refactor-styles.scss
@@ -380,8 +380,8 @@ article,
   flex: 0 0 100%; // Take full width
   
   @media (max-width: 991px) {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
